fix: update 'Contact Us' button visibility in sidebar based on viewport

--- a/src/Components/UI/ListPricing/ListPricing.css
+++ b/src/Components/UI/ListPricing/ListPricing.css
@@ -2,7 +2,7 @@
   margin: 0 -15px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   padding-top: 0.3rem;
   padding-bottom: 1rem;
   padding-top: 1rem;
